--- a/src/components/home/components/likes/likes.component.styles.css
+++ b/src/components/home/components/likes/likes.component.styles.css
@@ -8,9 +8,9 @@
 }
 
 .noLikes__wrapper {
-  padding: 46px 14px;
+  /* padding: 46px 14px; */
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 4px;
   flex: 1;
@@ -18,7 +18,7 @@
 }
 
 .noLikes__instruction {
-  font-size: 12px;
+  font-size: 11px;
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   text-align: center;
@@ -29,7 +29,7 @@
   border-radius: 4px;
   padding: 0 6px;
   padding-top: 4px;
-  background-color: rgba(255, 255, 255, 0.4);
+  /* background-color: rgba(255, 255, 255, 0.4); */
   height: fit-content;
   /* z-index: 100000; */
 }
@@ -88,7 +88,7 @@
 .totalLikes {
   padding: 12px 8px;
   padding-bottom: 3px;
-  background-color: rgba(255, 255, 255, 0.4);
+  /* background-color: rgba(255, 255, 255, 0.4); */
   display: flex;
   flex-direction: row;
   align-items: center;
