--- a/src/components/home/home.component.styles.css
+++ b/src/components/home/home.component.styles.css
@@ -11,7 +11,7 @@
 }
 
 .wrapper__inner {
-  height: 40%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   row-gap: 12px;
@@ -52,13 +52,14 @@
 }
 
 .sectionTwo_A {
-  flex: 2;
+  flex: 1;
   row-gap: 4px;
   height: 100%;
 }
 
 .sectionTwo_B {
-  flex: 3;
+  flex: 1;
   row-gap: 8px;
   height: 100%;
+  overflow: hidden;
 }
