--- a/src/components/home/components/likes/likes.component.styles.css
+++ b/src/components/home/components/likes/likes.component.styles.css
@@ -8,21 +8,32 @@
 }
 
 .noLikes__wrapper {
-  /* padding: 46px 14px; */
+  padding: 23px 14px;
   display: flex;
   /* align-items: center; */
-  background-color: rgba(255, 255, 255, 0.4);
+  /* background-color: rgba(255, 255, 255, 0.4); */
   border-radius: 4px;
   flex: 1;
   justify-content: center;
+  flex-direction: column;
 }
 
 .noLikes__instruction {
-  font-size: 11px;
+  font-size: 12px;
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   text-align: center;
   color: #c8c8c8ff;
+}
+
+.noLikes__instruction__list {
+  font-size: 12px;
+  font-family: "Inter", sans-serif;
+  color: #c8c8c8ff;
+}
+
+.noLikes__instruction__list li {
+  margin-bottom: 6px;
 }
 
 .leaderBoard {
@@ -39,7 +50,7 @@
 }
 
 .leaderBoard__user {
-  margin-bottom: 6px;
+  /* margin-bottom: 6px; */
   display: flex;
   flex-direction: row;
   column-gap: 6px;
@@ -141,4 +152,101 @@
   width: 2px;
   background-color: #ffffff;
   border-radius: 100px;
+}
+
+.followersPresent__latestFollower {
+  display: flex;
+  flex-direction: row;
+  column-gap: 6px;
+  align-items: center;
+  /* margin-top: 3px; */
+  margin-bottom: 6px;
+  /* background-color: rgba(255, 255, 255, 0.4); */
+  border-radius: 100px;
+  height: auto;
+  /* padding: 4px; */
+}
+.followersPresent__latestFollower__avatar {
+  width: 28px;
+  aspect-ratio: 1;
+  border-radius: 100px;
+  overflow: hidden;
+  margin-top: 3px;
+}
+.followersPresent__latestFollower__avatar__icon {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 0;
+}
+.followersPresent__latestFollower__info {
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  width: 100px;
+  row-gap: 4px;
+}
+.followersPresent__latestFollower__info__name {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 11px;
+  color: #c7c7c7ff;
+  white-space: nowrap;
+}
+.followersPresent__latestFollower__info__instruction {
+  margin-top: -4px;
+  font-size: 10px;
+  font-family: "Inter", sans-serif;
+  color: #ffffff;
+  font-style: italic;
+}
+
+/* shares */
+.followersPresent__latestShare {
+  display: flex;
+  flex-direction: row;
+  column-gap: 6px;
+  align-items: center;
+  /* margin-top: 3px; */
+  margin-bottom: 6px;
+  /* background-color: rgba(255, 255, 255, 0.4); */
+  border-radius: 100px;
+  height: auto;
+  /* padding: 4px; */
+}
+.followersPresent__latestShare__avatar {
+  width: 28px;
+  aspect-ratio: 1;
+  border-radius: 100px;
+  overflow: hidden;
+  margin-top: 3px;
+}
+
+.followersPresent__latestShare__avatar__icon {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 0;
+}
+
+.followersPresent__latestShare__info {
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  width: 100px;
+  row-gap: 4px;
+}
+.followersPresent__latestShare__info__name {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 11px;
+  color: #c7c7c7ff;
+  white-space: nowrap;
+}
+.followersPresent__latestShare__info__instruction {
+  margin-top: -4px;
+  font-size: 10px;
+  font-family: "Inter", sans-serif;
+  color: #ffffff;
+  font-style: italic;
 }
