--- a/src/components/home/components/likes/likes.component.styles.css
+++ b/src/components/home/components/likes/likes.component.styles.css
@@ -111,63 +111,6 @@
   margin-top: -4px;
 }
 
-.totalLikes {
-  padding: 12px 8px;
-  padding-bottom: 3px;
-  /* background-color: rgba(255, 255, 255, 0.4); */
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  column-gap: 5px;
-  border-radius: 100px;
-}
-
-.totalLikes__icon {
-  width: 24px;
-}
-
-.totalLikes__progress_wrapper {
-  flex: 1;
-  row-gap: 3px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  margin-top: -4px;
-}
-
-.totalLikes__progress_visual {
-  height: 5px;
-  background-color: #ffffff;
-  border-radius: 100px;
-}
-
-.totalLikes__progress__active {
-  background-color: #f22c56;
-  height: 100%;
-  border-radius: 100px;
-}
-
-.totalLikes__wrapper {
-  display: flex;
-  flex-direction: row;
-  column-gap: 3px;
-  align-items: center;
-}
-
-.totalLikes__text {
-  font-size: 11px;
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  color: white;
-}
-
-.totalLikes__textSeparator {
-  height: 1em;
-  width: 2px;
-  background-color: #ffffff;
-  border-radius: 100px;
-}
-
 .followersPresent__latestFollower {
   display: flex;
   flex-direction: row;
@@ -181,7 +124,7 @@
   /* padding: 4px; */
 }
 .followersPresent__latestFollower__avatar {
-  width: 28px;
+  width: 26px;
   aspect-ratio: 1;
   border-radius: 100px;
   overflow: hidden;
@@ -189,8 +132,8 @@
   border: 1px solid #f22c56;
 }
 .followersPresent__latestFollower__avatar__icon {
-  width: 16px;
-  height: 16px;
+  width: 14px;
+  height: 14px;
   position: absolute;
   top: 0;
 }
@@ -213,7 +156,7 @@
   font-size: 9px;
   font-family: "Inter", sans-serif;
   color: #ffffff;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 /* shares */
@@ -230,7 +173,7 @@
   /* padding: 4px; */
 }
 .followersPresent__latestShare__avatar {
-  width: 28px;
+  width: 26px;
   aspect-ratio: 1;
   border-radius: 100px;
   overflow: hidden;
@@ -264,5 +207,5 @@
   font-size: 9px;
   font-family: "Inter", sans-serif;
   color: #ffffff;
-  font-style: italic;
+  /* font-style: italic; */
 }
