--- a/src/components/home/home.component.styles.css
+++ b/src/components/home/home.component.styles.css
@@ -120,3 +120,18 @@
   background-color: #ffffff;
   border-radius: 100px;
 }
+
+.newFollowers_count {
+  display: flex;
+  align-items: center;
+  color: white;
+  column-gap: 6px;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 10px;
+  margin-top: 24px;
+}
+
+.newFollowers_count__value {
+  font-size: 18px;
+}
