--- a/src/components/home/components/shares/share.component.styles.css
+++ b/src/components/home/components/shares/share.component.styles.css
@@ -1,23 +1,15 @@
-.joinedTheLiveWrapper {
-  margin-top: 12px;
-}
-
-.joinedTheLiveWrapper__user {
-  display: flex;
-  align-items: center;
-  column-gap: 6px;
-}
-
-.followersPresent__joinedTheLive {
+/* shares */
+.followersPresent__latestShare {
   display: flex;
   flex-direction: row;
   column-gap: 6px;
   align-items: center;
-  margin-bottom: 6px;
   border-radius: 100px;
   height: auto;
+  position: relative;
+  margin-top: 10px;
 }
-.followersPresent__joinedTheLive__avatar {
+.followersPresent__latestShare__avatar {
   width: 26px;
   aspect-ratio: 1;
   border-radius: 100px;
@@ -26,30 +18,34 @@
   border: 1px solid #f22c56;
 }
 
-.followersPresent__joinedTheLive__avatar__icon {
+.followersPresent__latestShare__avatar__icon {
   width: 16px;
   height: 16px;
   position: absolute;
   top: 0;
 }
 
-.followersPresent__joinedTheLive__info {
+.followersPresent__latestShare__info {
   display: flex;
   overflow: hidden;
   flex-direction: column;
   width: 100px;
   row-gap: 4px;
 }
-.followersPresent__joinedTheLive__info__name {
+.followersPresent__latestShare__info__name {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   font-size: 9px;
   color: #c7c7c7ff;
   white-space: nowrap;
 }
-.followersPresent__joinedTheLive__info__instruction {
+.followersPresent__latestShare__info__instruction {
   margin-top: -4px;
   font-size: 9px;
   font-family: "Inter", sans-serif;
   color: #ffffff;
+}
+
+.likes_wrapper__followsAndShares {
+  margin-top: -3px;
 }
