--- a/src/components/home/components/likes/likes.component.styles.css
+++ b/src/components/home/components/likes/likes.component.styles.css
@@ -161,12 +161,12 @@
 }
 
 /* shares */
-.followersPresent__latestShare {
+.followersPresent__latestGift {
   display: flex;
   flex-direction: row;
   column-gap: 6px;
   align-items: center;
-  /* margin-top: 3px; */
+  margin-top: 6px;
   margin-bottom: 6px;
   /* background-color: rgba(255, 255, 255, 0.4); */
   border-radius: 100px;
@@ -174,42 +174,43 @@
   /* padding: 4px; */
   position: relative;
 }
-.followersPresent__latestShare__avatar {
+.followersPresent__latestGift__avatar {
   width: 26px;
   aspect-ratio: 1;
   border-radius: 100px;
   overflow: hidden;
   margin-top: 3px;
   border: 1px solid #f22c56;
+  display: flex;
+  justify-content: center;
 }
 
-.followersPresent__latestShare__avatar__icon {
-  width: 16px;
-  height: 16px;
+.followersPresent__latestGift__avatar__icon {
+  width: 20px;
+  height: 20px;
   position: absolute;
-  top: 0;
+  top: -4px;
 }
 
-.followersPresent__latestShare__info {
+.followersPresent__latestGift__info {
   display: flex;
   overflow: hidden;
   flex-direction: column;
   width: 100px;
   row-gap: 4px;
 }
-.followersPresent__latestShare__info__name {
+.followersPresent__latestGift__info__name {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   font-size: 9px;
   color: #c7c7c7ff;
   white-space: nowrap;
 }
-.followersPresent__latestShare__info__instruction {
+.followersPresent__latestGift__info__instruction {
   margin-top: -4px;
   font-size: 9px;
   font-family: "Inter", sans-serif;
   color: #ffffff;
-  /* font-style: italic; */
 }
 
 .likes_wrapper__followsAndShares {
