--- a/src/components/home/components/gifts/gifts.component.css
+++ b/src/components/home/components/gifts/gifts.component.css
@@ -1,7 +1,7 @@
 .giftsWrapper {
   min-height: 50px;
   display: flex;
-  /* column-gap: 12px; */
+  column-gap: 12px;
 }
 
 .followersPresent__latestGift {
@@ -11,11 +11,15 @@
   align-items: center;
   margin-top: 6px;
   margin-bottom: 6px;
-  /* background-color: rgba(255, 255, 255, 0.4); */
   border-radius: 100px;
   height: auto;
-  /* padding: 4px; */
   position: relative;
+  justify-content: center;
+  padding: 0 8px;
+  min-width: 100px;
+}
+.followersPresent__latestGift:first-of-type {
+  margin-left: 12px;
 }
 .followersPresent__latestGift__avatar {
   width: 26px;
@@ -39,7 +43,6 @@
   display: flex;
   overflow: hidden;
   flex-direction: column;
-  width: 100px;
   row-gap: 4px;
 }
 .followersPresent__latestGift__info__name {
@@ -54,4 +57,6 @@
   font-size: 9px;
   font-family: "Inter", sans-serif;
   color: #ffffff;
+  white-space: nowrap;
+  width: fit-content;
 }
